@@ -1,3 +1,14 @@
+2009-04-17  Laszlo Gombos  <laszlo.1.gombos@nokia.com>
+
+        Reviewed by Simon Hausmann.
+
+        https://bugs.webkit.org/show_bug.cgi?id=25242
+
+        Remove QtCore 4.5 dependency from QWebElement test
+
+        * tests/qwebelement/tst_qwebelement.cpp:
+        (tst_QWebElement::iteration): Use QList::count() instead of QList::length()
+
 2009-04-16  Holger Hans Peter Freyther  <zecke@selfish.org>
 
         Rubber-stamped by Simon Hausmann.
